--- a/main.tex
+++ b/main.tex
@@ -60,6 +60,7 @@
 \renewcommand\thelemma{\unskip}
 \newcommand{\christ}[3]{\ensuremath{\Gamma^{#1}_{#2#3}}}
 \newcommand{\half}{\ensuremath{\frac{1}{2}}}
+\newcommand{\kwart}{\ensuremath{\frac{1}{4}}}
 \newcommand\del{\overline{\boldsymbol{{\triangledown}}}}
 \newcommand\maal{\boldsymbol{\times}}
 \newcommand\spatie{\quad\quad\quad\quad}
